--- a/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/PizzaSize/Index.cshtml
@@ -32,6 +32,14 @@ else
     <p class="text-danger">You do not have access to this resource.</p>
 }
 
+@*specific style to this page only*@
+<style>
+
+    tr td:first-child {
+        text-transform: capitalize;
+    }
+</style>
+
 @section Scripts{
     <script src="~/js/pizzaSize.js"></script>
 }
