--- a/PizzaPros/PizzaPros/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/PizzaPros/PizzaPros/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <input id="ContactPhone" asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
@@ -25,6 +25,16 @@
     </div>
 </div>
 
+
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+    <script>
+        $(function () {
+
+            $("#ContactPhone").mask("(999) 999-9999");
+        });
+
+    </script>
 }
