--- a/PizzaPros/PizzaPros/Pages/Admin/User/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/User/Index.cshtml
@@ -16,7 +16,7 @@
         <table id="DT-load" class="table table-striped table-bordered" style="width:100%">
             <thead>
                 <tr>
-                    <th>Full Name</th>
+                    <th class="text-capitalize">Full Name</th>
                     <th>Email</th>
                     <th>Phone Number</th>
                     <th></th>
@@ -33,7 +33,12 @@ else
     </h1>
     <p class="text-danger">You do not have access to this resource.</p>
 }
-
+@*specific style to this page only*@
+<style>
+    tr td:first-child {
+        text-transform: capitalize;
+    }
+</style>
 
 
 @section Scripts{
