--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿@using PizzaPros.Utility
+﻿@*In order to update cart count on _Layout use Http and HttpContextAccessor*@
+
+
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@using PizzaPros.Utility
 
 
 <!DOCTYPE html>
@@ -53,6 +58,28 @@
                             </li>
                         }
 
+
+                        //added for customer view
+                        @*Visable only to customer *@
+                        @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart) != null)
+                        {
+                            <li>
+                                <a asp-page="/Customer/Cart/Index" class="nav-link text-white-50">
+                                    @{
+                                        var count = HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart);
+                                    }
+                                    <i class="fas fa-shopping-cart"></i> &nbsp; (@count)
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="#" class="nav-link text-white-50">
+                                    <i class="fas fa-shopping-cart"></i> &nbsp; (0)
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
