Updated Details page UI

--- a/PizzaPros/PizzaPros/Pages/Customer/Home/Details.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Customer/Home/Details.cshtml
@@ -7,14 +7,90 @@
 
 <div class="">
     <form method="post">
-        <input type="hidden" asp-for="ShopingCartObj.PizzaTypeId"/>
+        <input type="hidden" asp-for="ShopingCartObj.PizzaTypeId" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="container backgroundWhite">
             <div class="card">
                 <div class="card-header bg-light text-light ml-0 row container">
-                    <div class="col-12 col-md-6">
-                        <h1 class="text-primary font-weight-light">@Model.ShopingCartObj.PizzaType.Name</h1>
-                    </div>
+                    @if (Model.ShopingCartObj.PizzaType.PizzaSize.Size == "xlarge")
+                    {
+                        <div class="col-12 col-md-6">
+                            <div class="w-25 text-white text-center float-left col-md-3">
+                                <h4>
+                                    <b>
+                                        <span class="dot dot-yellow" style="line-height: normal;">
+                                            XL
+                                        </span>
+
+                                    </b>
+                                </h4>
+
+                            </div>
+                            <div class="col-md-9">
+                                <h1 class="text-primary font-weight-light text-capitalize">@Model.ShopingCartObj.PizzaType.Name</h1>
+                            </div>
+                        </div>
+
+                    }
+                    else if (Model.ShopingCartObj.PizzaType.PizzaSize.Size == "large")
+                    {
+                        <div class="col-12 col-md-6">
+                            <div class="w-25 text-white text-center float-left col-md-3">
+                                <h4>
+                                    <b>
+                                        <span class="dot dot-green" style="line-height: normal;">
+                                            L
+                                        </span>
+
+                                    </b>
+                                </h4>
+
+                            </div>
+                            <div class="col-md-9">
+                                <h1 class="text-primary font-weight-light text-capitalize">@Model.ShopingCartObj.PizzaType.Name</h1>
+                            </div>
+                        </div>
+
+                    }
+                    else if (Model.ShopingCartObj.PizzaType.PizzaSize.Size == "medium")
+                    {
+                        <div class="col-12 col-md-6">
+                            <div class="w-25 text-white text-center float-left col-md-3">
+                                <h4>
+                                    <b>
+                                        <span class="dot dot-blue" style="line-height: normal;">
+                                            M
+                                        </span>
+
+                                    </b>
+                                </h4>
+
+                            </div>
+                            <div class="col-md-9">
+                                <h1 class="text-primary font-weight-light text-capitalize">@Model.ShopingCartObj.PizzaType.Name</h1>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-12 col-md-6">
+                            <div class="w-25 text-white text-center float-left col-md-3">
+                                <h4>
+                                    <b>
+                                        <span class="dot dot-red" style="line-height: normal;">
+                                            S
+                                        </span>
+
+                                    </b>
+                                </h4>
+
+                            </div>
+                            <div class="col-md-9">
+                                <h1 class="text-primary font-weight-light text-capitalize">@Model.ShopingCartObj.PizzaType.Name</h1>
+                            </div>
+                        </div>
+                    }
+
                     <div class="col-12 col-md-6 text-md-right">
                         <h1 class="text-muted"> @((Model.ShopingCartObj.PizzaType.Price).ToString("c"))</h1>
                     </div>
@@ -27,49 +103,89 @@
 
                                     <div class="col-12">
                                         <span class="badge badge-warning h3">@Model.ShopingCartObj.PizzaType.Category.Name</span>
-                                        
-                                        <span class="badge badge-dark">@Model.ShopingCartObj.PizzaType.ToppingType.Name</span>
-                                       
-                                        <h3 class="text-success"></h3>
 
-                                        <p class="text-secondary">@Html.Raw(Model.ShopingCartObj.PizzaType.Description)</p>
+                                        <span class="badge badge-dark">@Model.ShopingCartObj.PizzaType.ToppingType.Name</span>
+
+                                        <p class="capFirstLetter">
+                                            @(Model.ShopingCartObj.PizzaType.PizzaCrustType.CrustType) with
+                                            <span class="text-capitalize">@(Model.ShopingCartObj.PizzaType.PizzaCrustFlavor.CrustFlavor)</span> crust flavor.
+                                        </p>
+
+                                        <p class="text-dark">
+                                            @Html.Raw(Model.ShopingCartObj.PizzaType.Description)
+                                        </p>
+
+
+
 
                                         <div class="row py-4">
                                             <div class="col-2"><label asp-for="ShopingCartObj.Count" class="h3"></label></div>
-                                            <div class="col-10"> 
-                                                <input type="text" asp-for="ShopingCartObj.Count" class="form-control rounded" height="40px;"/>  
+                                            <div class="col-8">
+                                                <input type="text" asp-for="ShopingCartObj.Count" class="form-control rounded w-25" height="40px;" />
                                                 <span asp-validation-for="ShopingCartObj.Count" class="text-danger"></span>
-                                            
+
                                             </div>
                                         </div>
                                     </div>
 
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-4 p-1 text-center">
+                            <img src="@Model.ShopingCartObj.PizzaType.Image" width="100%" class="rounded" />
+                        </div>
+                        <div class="col-12 col-lg-4 p-1 text-center">
+                            <div class="card-body w-75">
+                                <div class="card card-product d-flex flex-column py-0 border-0">
+                                    <h4 class="text-center bg-primary text-white py-2">Toppings Included</h4>
+                                    <ul class="list-group list-group-flush text-left card-block">
+                                        @foreach (var item in Model.PizzaTypeList.Where(t => t.Id == Model.ShopingCartObj.PizzaTypeId))
+                                        {
+                                            @foreach (var toppingItem in Model.ToppingsList.Where(i => i.Id == item.ToppingOneId
+                                                                                            || i.Id == item.ToppingTwoId
+                                                                                            || i.Id == item.ToppingThreeId
+                                                                                            || i.Id == item.ToppingFourId
+                                                                                            || i.Id == item.ToppingFiveId
+                                                                                            || i.Id == item.ToppingSixId
+                                                                                            || i.Id == item.ToppingSevenId
+                                                                                            || i.Id == item.ToppingEightId
+                                                                                                             ))
+                                            {
+                                                <li class="list-group-item border-0 py-0 text-capitalize text-break">@toppingItem.Name</li>
+
+                                            }
+                                        }
+                                    </ul>
+
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-4 p-1 text-center">
-                                <img src="@Model.ShopingCartObj.PizzaType.Image" width="100%" class="rounded" />
-                            </div>
-
-
                         </div>
+
                     </div>
                 </div>
-                <div class="card-footer">
-                    <div class="row">
-                        <div class="col-12 col-md-6 pb-1 ">
-                            <a asp-page="Index" class=" popup-button btn-square form-control btn-lg" style="height:50px;">Back to List</a>
-                        </div>
-                        <div class="col-12 col-md-6 ">
-                            <button type="submit" class=" popup-button popup-button-blue btn-square form-control btn-lg" style="height:50px;">Add to Cart</button>
-                        </div>
+            </div>
+            <div class="card-footer">
+                <div class="row">
+                    <div class="col-12 col-md-6 pb-1 ">
+                        <a asp-page="Index" class=" popup-button btn-square form-control btn-lg" style="height:50px;">Back to List</a>
+                    </div>
+                    <div class="col-12 col-md-6 ">
+                        <button type="submit" class=" popup-button popup-button-blue btn-square form-control btn-lg" style="height:50px;">Add to Cart</button>
                     </div>
                 </div>
             </div>
         </div>
-    </form>
+    </div>
+</form>
 </div>
 
-@section Scripts{ 
+@*css for this page only*@
+<style>
+
+    
+</style>
+
+
+@section Scripts{
     <partial name="_ValidationScriptsPartial" />
 
 }
